Updated template for ScienceWorld application

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {   
-    "name": "template",
-    "problem_type": "template",
+    "name": "ScienceWorld",
+    "problem_type": "ScienceWorld",
     
     "experience_sample_batch_ratio": 0,
      
