--- a/config_local.json
+++ b/config_local.json
@@ -1,5 +1,5 @@
 {
- "adapter_select": ["Default", "Default"],
+ "adapter_select": ["Language", "Language"],
  "training_action_cap": 100,
  "testing_action_cap":100,
  "reward_signal": [1,-0.01,-0.1],
