--- a/config.json
+++ b/config.json
@@ -4,14 +4,14 @@
     
     "experience_sample_batch_ratio": 0,
      
-    "number_training_episodes": 10000,
-    "number_training_repeats": 2,
+    "number_training_episodes": 1000,
+    "number_training_repeats": 1,
     "number_training_seeds": 1,
 
-    "number_test_episodes": 10000,
-    "number_test_repeats": 5,
+    "number_test_episodes": 1000,
+    "number_test_repeats": 1,
 
-    "agent_select": ["Qlearntab"],
+    "agent_select": ["Neural_Q_language", "Qlearntab"],
     "agent_parameters":{
         "Qlearntab":{
             "alpha": 0.05,
